자바 8로 다운그레이드
- 자바 8로 변경되면서 스프링 부트 및 그레이들 버전 다운그레이드
- 관련 클래스 변경