@@ -1,15 +1,16 @@
 package boot.demo.aop.config.security;
 
 import boot.demo.aop.exception.ErrorCode;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.InsufficientAuthenticationException;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.web.authentication.AuthenticationFailureHandler;
 import org.springframework.stereotype.Component;
 
+import javax.servlet.ServletException;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -20,12 +21,16 @@ public class SecurityLoginFailureHandler implements AuthenticationFailureHandler
     public void onAuthenticationFailure(HttpServletRequest request, HttpServletResponse response, AuthenticationException exception) throws IOException, ServletException {
         String errorMessage = ErrorCode.INVALID_LOGIN_FORM.getMessage();
 
+
         if (exception instanceof InsufficientAuthenticationException) {
             errorMessage = ErrorCode.INVALID_SECRET_KEY.getMessage();
+        } else if (exception != null) {
+            log.error(exception.getMessage(), exception);
+            errorMessage = exception.getMessage();
         }
         log.error("|| LOGIN ERROR || - {}", errorMessage);
 
-        String encodedErrorMessage = URLEncoder.encode(errorMessage, StandardCharsets.UTF_8);
+        String encodedErrorMessage = URLEncoder.encode(errorMessage, "UTF-8");
 
         final String LOGIN_FAILURE_URL = request.getContextPath() + "/auth/login?errorMessage=" + encodedErrorMessage;
 
